--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -31,6 +31,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   width: 100px;
+  margin: 20px;
+  border: 1px solid black;
+  padding: 10px;
 }
 
 
