--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -16,20 +16,24 @@
 
 .body {
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
 
 .happening-index {
   display: flex;
+  flex-grow: 1;
   flex-wrap: wrap;
+  width: 50%;
+}
 
+.map {
+  display: flex;
+  flex-grow: 1;
+  width: 50%;
 }
 
 .index-item {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   width: 100px;
   margin: 20px;
   border: 1px solid black;
@@ -40,10 +44,4 @@
 .index-image {
   max-width: 100%;
   max-height: 100%;
-}
-
-.map {
-  display: flex;
-  width: 500px;
-  height: 500px;
 }
