--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <script src="http://widget.cloudinary.com/global/all.js" type="text/javescript"></script>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSNGbNO6tq4q7eNcduj5DVh-tFCg-5zvc">
   </script>
