--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,22 +1,14 @@
 .events-container {
   display: flex;
-  margin: 10px
-  
 }
 
 .happening-index {
   display: flex;
   flex-grow: 1;
   flex-wrap: wrap;
-  width: 50%;
+  width: 10%;
   flex-direction: column;
-}
-
-.map {
-  display: flex;
-  flex-grow: 1;
-  width: 500px;
-  height: 500px;
+  margin-top: 10px
 }
 
 .filter-buttons {
