--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -1,6 +1,10 @@
 .splash-page {
   display: flex;
   flex-direction: column;
+  background-image: url("http://res.cloudinary.com/awatt/image/upload/v1462301447/Spalsh_page_cmtez2.jpg");
+  height: calc(100vh - 83px);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .splash-page-image {
@@ -8,6 +12,7 @@
   flex-grow: 1;
   max-height: 100%;
   max-width: 100%;
+
 }
 
 .splash-page-container {
@@ -15,14 +20,22 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  top: calc(50vh - (/* height */100px / 2));
-  left: calc(50vw - (/* width */140px / 2));
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 400px;
+  height: 200px;
 }
 
 .splash-page-welcome-logo {
-
+  color: white;
+  font-size: 58px;
+  margin-bottom: 10px;
 }
 
 .splash-page-welcome-tag {
-  
+  color: white;
+  margin: 10px;
 }
