--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -7,6 +7,9 @@ ul, li {
 	text-align: center;
 	display: flex;
 	align-items: center;
+	background-color: #A1D490;
+	margin-left: 20px;
+	margin-right: 20px
 }
 .tg-list-item{
 	margin: 0 2em;
