--- a/app/assets/stylesheets/happening_form.scss
+++ b/app/assets/stylesheets/happening_form.scss
@@ -43,3 +43,9 @@
   font-size: 12px;
   border-radius: 10px;
 }
+
+.happening-form-map {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+}
