--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -8,6 +8,8 @@
   padding: 10px;
   height: 200px;
   justify-content: space-around;
+  box-shadow: 5px 5px 5px black;
+  border-radius: 15px;
 }
 
 .index-image {
@@ -31,4 +33,12 @@
   border: 1px solid black;
   padding: 5px;
   margin: 5px;
+}
+
+.index-item-container {
+  border: 2px solid #A1D490;
+  margin-left: 20px;
+  margin-right: 20px;
+  height: calc(100vh - 220px);
+  overflow: scroll;
 }
