--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -25,14 +25,15 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 400px;
-  height: 200px;
+  width: 800px;
+  height: 300px;
 }
 
 .splash-page-welcome-logo {
   color: white;
-  font-size: 58px;
+  font-size: 86px;
   margin-bottom: 10px;
+  text-shadow: 5px 5px black;
 }
 
 .splash-page-welcome-tag {
