--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+  <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSNGbNO6tq4q7eNcduj5DVh-tFCg-5zvc">
   </script>
 </head>
