--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -42,3 +42,9 @@
 .auth-form-item {
   margin: 10px
 }
+
+.auth-form-container {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
