fix checkbox and lots of css

--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -1,7 +1,7 @@
 .splash-page {
   display: flex;
   flex-direction: column;
-  background-image: url("http://res.cloudinary.com/awatt/image/upload/v1462301447/Spalsh_page_cmtez2.jpg");
+  background-image: url("http://res.cloudinary.com/awatt/image/upload/v1462392016/SplashPageImage_asaz9f.jpg");
   height: calc(100vh - 83px);
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,7 +21,7 @@
   align-items: center;
   position: absolute;
   margin: auto;
-  top: 0;
+  top: -300px;
   right: 0;
   bottom: 0;
   left: 0;
