--- a/app/assets/stylesheets/index_filter.scss
+++ b/app/assets/stylesheets/index_filter.scss
@@ -3,3 +3,45 @@
   font-size: 16px;
   border-radius: 10px;
 }
+
+.filter-item {
+  list-style: none;
+  width: 125px;
+  height: 60px;
+  background-color: #E6E6E6;
+}
+
+.filter-item-input {
+  transform: scale(2);
+}
+
+.filter-item-list {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+  justify-content: space-around;
+  padding-left: 0px;
+  margin-top: 5px;
+}
+
+.filter-item-header {
+  margin-bottom: 5px;
+  margin-top: 5px
+}
+
+.filter-item-list-header {
+  display: flex;
+  justify-content: center;
+  color: #E6E6E6;
+  font-size: 35px;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.filter-item-container {
+  background-color: slategray;
+  margin-left: 20px;
+  margin-right: 20px;
+}
