--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -36,7 +36,7 @@
 }
 
 .index-item-container {
-  border: 2px solid #A1D490;
+  border: 2px solid slategray;
   margin-left: 20px;
   margin-right: 20px;
   height: calc(100vh - 220px);
