--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -48,3 +48,10 @@
   margin-right: 10px;
   margin-bottom: 5px;
 }
+
+.login-errors {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  color: crimson;
+}
