--- a/app/assets/stylesheets/happening_form.scss
+++ b/app/assets/stylesheets/happening_form.scss
@@ -9,7 +9,6 @@
   flex-wrap: wrap;
   width: 10%;
   flex-direction: column;
-  margin-top: 10px
 }
 
 .happening-form-header {
@@ -21,8 +20,13 @@
 .happening-form-tags {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
+  flex-wrap: wrap;
+  height: 55px;
+  padding-left: 40px;
+  padding-right: 25px;
+  margin-top: 40px;
 }
 
 .happening-form-label {
@@ -36,6 +40,12 @@
   margin: 20px;
   padding: 10px;
   align-items: flex-start;
+}
+
+.happening-form-confirm {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
 
 .happening-form-confirm-item {
@@ -55,4 +65,15 @@
   display: flex;
   flex-grow: 2;
   height: calc(100vh - 120px);
+}
+
+.happening-form-tag {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.happening-form-input {
+  margin-top: 24px;
+  margin-left: 11px;
 }
