HappeningShow gets props & Navbar css

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -17,5 +17,10 @@
 
 .auth-container {
   display: flex;
-  
+}
+
+.navbar-happening-form {
+  position: fixed;
+  margin-top: 22px;
+  right: 45%
 }
