add search UI feedback

--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -42,3 +42,10 @@
   height: calc(100vh - 220px);
   overflow: scroll;
 }
+
+.happening-index-warning {
+  display: flex;
+  font-size: 50px;
+  justify-content: center;
+  margin-top: 250px;
+}
