AuthForm, HappeningShow, HappeningIndex css

--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -24,8 +24,8 @@
 
 .index-item-tags {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
 
 .index-item-tag {
@@ -52,15 +52,20 @@
 .index-item-tags-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .index-text-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
   align-items: center;
 }
 
-.index-item-tas-header {
-  
+.index-text-title {
+  margin: 0px;
+}
+
+.index-item-tags-header {
+  margin: 0px;
 }
