--- a/app/assets/stylesheets/splash_page.scss
+++ b/app/assets/stylesheets/splash_page.scss
@@ -21,9 +21,9 @@
   align-items: center;
   position: absolute;
   margin: auto;
-  top: -300px;
+  top: 45%;
   right: 0;
-  bottom: 0;
+  bottom: 86%;
   left: 0;
   width: 800px;
   height: 300px;
