--- a/app/assets/stylesheets/happening_show.scss
+++ b/app/assets/stylesheets/happening_show.scss
@@ -1,12 +1,12 @@
 .happening-show-container {
   display: flex;
   flex-direction: row;
+  height: 600px;
 }
 .happening-show-image-container {
-  height: 600px;
   display: flex;
   background-color: black;
-  width: 100%;
+  height: 100%;
 }
 
 .happening-show-details-container {
@@ -45,23 +45,39 @@
   justify-content: center;
 }
 
-.happening-value {
+.happening-show-decription-header {
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-width: 200px
+  min-width: 200px;
+  margin: 0px;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  text-decoration: underline;
+  font-size: 23px;
 }
 
 .happening-value-tags {
   display: flex;
-  justify-content: center;
+  align-items: center;
   flex-direction: column;
   padding: 0px;
 }
 
 .happening-value-date {
+
+}
+
+.happening-value-date-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  padding: 0px;
+  align-items: center;
+  padding-top: 30px;
+}
+
+.happening-value-address-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-width: 200px;
 }
