CreateSession Button only apears on /happenings

--- a/app/assets/stylesheets/index_filter.scss
+++ b/app/assets/stylesheets/index_filter.scss
@@ -42,7 +42,7 @@
 }
 
 .filter-item-container {
-  background-color: slategray;
+  background-color: #2D3E50;
   margin-left: 20px;
   margin-right: 20px;
 }
