--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -35,7 +35,7 @@
 }
 
 .index-item-container {
-  border: 2px solid slategray;
+  border: 2px solid #2D3E50;
   margin-left: 20px;
   margin-right: 20px;
   height: calc(100vh - 220px);
