--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -6,12 +6,14 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  border-bottom: 3px solid black;
+  border-bottom: 2px solid black;
+  background-color: #2D3E50;
 }
 
 h1 {
   margin-left: 20px;
   cursor: pointer;
+  color: white;
 }
 
 .login-form {
