Update button css

--- a/app/assets/stylesheets/happening_show.scss
+++ b/app/assets/stylesheets/happening_show.scss
@@ -26,12 +26,13 @@
 .happening-show-title {
   display: flex;
   justify-content: center;
+  color: white;
 }
 
 .happening-show-title-container {
   display: flex;
   justify-content: center;
-  background-color: slategray;
+  background-color: #2D3E50;
   width: 100%;
 }
 
