--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -9,6 +9,7 @@
   justify-content: space-around;
   box-shadow: 5px 5px 5px black;
   border-radius: 15px;
+  background-color: white;
 }
 
 .index-image {
@@ -40,6 +41,7 @@
   margin-right: 20px;
   height: calc(100vh - 220px);
   overflow: scroll;
+  background-color: slategray;
 }
 
 .happening-index-warning {
