--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,3 +21,9 @@ h1 {
   flex-direction: column;
   align-self: center;
 }
+
+.light-click {
+  background-color: #2D3E50;
+  border: 1px solid #979797;
+  color: white;
+}
