--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -9,7 +9,7 @@
   justify-content: space-around;
   box-shadow: 5px 5px 5px black;
   border-radius: 15px;
-  background-color: white;
+  background-color: #E6E6E6;
 }
 
 .index-image {
