--- a/app/assets/stylesheets/happening_show.scss
+++ b/app/assets/stylesheets/happening_show.scss
@@ -44,6 +44,8 @@
 .happening-show-description-container {
   display: flex;
   justify-content: center;
+  padding-left: 10px;
+  padding-right: 5px;
 }
 
 .happening-show-decription-header {
@@ -81,4 +83,6 @@
   align-items: center;
   flex-direction: column;
   min-width: 200px;
+  padding-left: 10px;
+  padding-right: 5px;
 }
