--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -10,6 +10,11 @@
   box-shadow: 5px 5px 5px black;
   border-radius: 15px;
   background-color: #E6E6E6;
+  transition: transform 0.2s;
+}
+
+.index-item:hover {
+  transform: scale(1.04);
 }
 
 .index-image {
