--- a/app/assets/stylesheets/happening_form.scss
+++ b/app/assets/stylesheets/happening_form.scss
@@ -76,3 +76,11 @@
   margin-top: 24px;
   margin-left: 11px;
 }
+
+.happening-form-random-image {
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  color: blue;
+  border: 1px solid blue;
+  border-radius: 10px;
+}
