--- a/app/assets/stylesheets/happening_show.scss
+++ b/app/assets/stylesheets/happening_show.scss
@@ -76,6 +76,7 @@
   flex-direction: column;
   align-items: center;
   padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .happening-value-address-container {
