--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -44,7 +44,7 @@
   margin-left: 20px;
   margin-right: 20px;
   height: calc(100vh - 220px);
-  overflow: scroll;
+  overflow-y: scroll;
   background-color: slategray;
 }
 
