--- a/app/assets/stylesheets/happening_show.scss
+++ b/app/assets/stylesheets/happening_show.scss
@@ -1,7 +1,7 @@
 .happening-show-container {
   display: flex;
   flex-direction: row;
-  height: 600px;
+  height: 70vh;
 }
 .happening-show-image-container {
   display: flex;
