--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -43,6 +43,12 @@
   margin: 10px
 }
 
+.auth-button {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
 .auth-form-container {
   margin-left: 10px;
   margin-right: 10px;
