--- a/app/assets/stylesheets/happening_form.scss
+++ b/app/assets/stylesheets/happening_form.scss
@@ -83,8 +83,18 @@
   padding-bottom: 0px;
   color: blue;
   border: 1px solid blue;
-  border-radius: 10px;
+  border-radius: 5px;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.happening-form-random-image:hover {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
+  background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+  background-image: -moz-linear-gradient(top, rgba(0,0,0, 0.05) 0%, rgba(0,0,0, 0.10));
+  background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+  background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
 }
 
 textarea {
