--- a/app/assets/stylesheets/index_item.scss
+++ b/app/assets/stylesheets/index_item.scss
@@ -7,7 +7,7 @@
   padding: 10px;
   height: 200px;
   justify-content: space-around;
-  box-shadow: 5px 5px 5px black;
+  box-shadow: 15px 14px 16px -5px rgba(0,0,0,0.75);
   border-radius: 15px;
   background-color: #E6E6E6;
   transition: transform 0.2s;
